Fix menu item cropping

--- a/app/src/Nav.module.css
+++ b/app/src/Nav.module.css
@@ -2,7 +2,7 @@ nav {
     background-color: lightpink;
     color: white;
     height: 4.2em;
-    padding: 0.7em;
+    padding: 0.6em;
     font-size: 0.8em;
     text-transform: uppercase;
     display: flex;
